# cbl2py

./: .gitignore  README.md  pyproject.toml
cbl2py/: LoggingConfig.py  __init__.py  main.py
cbl2py/antlr4/: Cobol.g4  Cobol.interp  CobolLexer.interp  CobolLexer.py  CobolLexer.tokens  CobolListener.py  CobolParser.py  CobolPreprocessor.g4  CobolPreprocessor.interp  CobolPreprocessorLexer.interp  CobolPreprocessorLexer.py  CobolPreprocessorLexer.tokens  CobolPreprocessorListener.py  CobolPreprocessorParser.py  CobolPreprocessorVisitor.py  CobolVisitor.py  build.sh
cbl2py/antlr4/.antlr/: Cobol.interp  CobolLexer.interp  CobolLexer.java  CobolParser.java  (+4 more)
cbl2py/preprocessor/: CobolCommentEntriesMarker.py  CobolDocumentContext.py  CobolDocumentParser.py  CobolDocumentParserListener.py  CobolHiddenTokenCollectorListener.py  CobolInlineCommentEntriesNormalizer.py  CobolLine.py  CobolLineIndicatorProcessor.py  CobolLineReader.py  CobolLineRewriter.py  CobolLineTypeEnum.py  CobolLineWriter.py  CobolPreprocessor.py  CobolPreprocessorTokens.py  CobolReplacementMapping.py  CobolSourceFormatEnum.py  ListenerImplementation.py  TokenUtils.py
cbl2py/transpiler/: Main.py
tests/: HelloWorld.cbl  TODO-LIST.txt  test_preprocessor.py  test_sample.py  test_transpiler.py
tests/cobol/: ASSSVSRT.cbl  Accept.cbl  DataType_1.cbl  DataType_3.cbl  DataType_3_pre.cbl  HelloWorld.cbl  READVE3.cbl  READVE3_pre.cbl  Test.cbl
tests/python/: ASSSVSRT.py  DataType_1.cbl  DataType_1.py  DataType_2.cbl  DataType_2.py  DataType_3.py  DataType_3_sql.py  HelloWorld.py  READVE3.py  READVE3_sql.py
(+19 files in other folders)
