[tool.poetry]
name = "cbl2py"
version = "0.1.0"
description = "Cobol to Python Translator"
authors = ["Fausto Zanasi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
antlr4-python3-runtime = "^4.11.1"
typer = "^0.6.1"

[tool.poetry.scripts]
test = "cbl2py.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
